# MLP

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/libs/io/: io.cpp  io.h
src/libs/matrix/: matrix.cpp  matrix.h
src/libs/network/: network.cpp  network.h
src/libs/util/: util.cpp  util.h
